Bug 454895 - "Download New Plasma Widgets" in "Add Widgets" doesn't work on X11
Summary: "Download New Plasma Widgets" in "Add Widgets" doesn't work on X11
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: regression
: 455133 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-05 17:02 UTC by Fushan Wen
Modified: 2022-08-29 04:23 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.95
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-06-05 17:02:25 UTC
KF5.95 master build
Comment 1 Bug Janitor Service 2022-06-05 17:15:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/187
Comment 2 Alexander Lohnau 2022-06-09 10:44:13 UTC
Git commit 4b2e1167c3333e7eb78a87c75a8b96735e63970e by Alexander Lohnau, on behalf of Fushan Wen.
Committed on 09/06/2022 at 10:41.
Pushed by alex into branch 'master'.

Don't use menu as transientParent

The menu is going to be closed at any time, which makes transientParent
become invalid.
FIXED-IN: 5.95

M  +9    -1    src/qtquickdialogwrapper.cpp

https://invent.kde.org/frameworks/knewstuff/commit/4b2e1167c3333e7eb78a87c75a8b96735e63970e
Comment 3 Nate Graham 2022-06-14 14:46:19 UTC
*** Bug 455133 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2022-08-29 01:56:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/200
Comment 5 Bug Janitor Service 2022-08-29 04:23:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/201