Don't use menu as transientParent

The menu is going to be closed at any time, which makes transientParent
become invalid.

BUG: 454895
FIXED-IN: 5.95